Teacher's edits